# poco

./: .gitignore  CONTRIBUTE.md  LICENSE  README.md  environment.yml  pyproject.toml
.devcontainer/: devcontainer.json
poco/: __init__.py  poco.py
poxo/: __init__.py  poxo.py
tests/: test_import.py
